Add PlayerInfo